--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -43,7 +43,7 @@ box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 
 .sort-by{
-    background-color:#EC006F;;
+    background-color:#EC006F;
     height: 30px;
     text-align: center;
     border-radius: 25px;
