--- a/src/MoviePage.css
+++ b/src/MoviePage.css
@@ -4,7 +4,7 @@
     height: 80vh;
     background-color: #f4f4f4;
     border-radius: 10px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: white 0px 7px 29px 0px;
     overflow: hidden;
     text-decoration: none;
     margin-top: 50px;
@@ -32,7 +32,7 @@ margin: 10px;
 
 .movie-page-header{
     color: white;
-    background-color: black;
+    background-color: #EC006F;
     padding: 0.5rem;
     width: fit-content;
     border-radius: 8px;
